edits ch6 studycase

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -6,11 +6,10 @@ To be completed.
 
 ## Proportion-based LRPs
 
-The proportion-based LRPs are the simplest assessment method presented. It consists in verifying is all CUs within the SMU of interest are assessed to be above their lower benchmarks or above the red zone. Complications related to applying proportion-based LRPs arrise when considering the range of data availability for salmon CUs. The data availability will determine what metrics are used for the CU status assessment and wether an assessment can be made at all. Recommendations on when it may be appropriate to use a subset of CUs as proxy for all CUs within an SMU are provided in the companion Guidelines paper (Holt et al. In review).   
+The proportion-based LRPs are the simplest assessment method presented. It consists in verifying is all CUs within the SMU of interest are assessed to be above their lower benchmarks or above the red zone. Complications related to applying proportion-based LRPs arise when considering the range of data availability for salmon CUs. The data availability will determine what metrics are used for the CU status assessment and whether an assessment can be made at all. Recommendations on when it may be appropriate to use a subset of CUs as proxy for all CUs within an SMU are provided in the companion Guidelines paper (Holt et al. In review).   
 
-The case studies in this paper considered a variety of metrics and assessment methods for determining status of individual CUs. We found that using $S_{gen}$ as single metric lower benchmark resulted in similar status assessments to using the  multi-dimensional assessment tool. This similarities occur because in most years the multi-dimensional approach relies on $S_{gen}$ estimates to assess status, as was seen on both Interior Fraser coho and WCVI chinook study cases. Exceptions occur when the $S_{gen}$ estimates are below population thresholds (e.g. below 1500 spawners), as in the interior Fraser coho study case. The status assessments, however, are sensitive to the method and recruitment model used to estimate $S_{gen}$. The decision on which method to consider depends on the iterpretation of the data and prior knowledge for each CU, highlighting the importance of considering expert knowledge input and peer-review for salmon assessments. 
-In data poor scenarios, it may not be possible to estimate $S_{gen}$, as was seen in the Inside South Coast Chum - Non-Fraser study case. When $S_{gen}$ estimates are not available and alternative single metric benchmarks are used, e.g. abundance percentiles, the status assessments between the multi-dimensional tool and single metric approach diverge more.
-For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was triggered more often when percentile benchmarks were used. Whereas when the distributional target was used as a metric for the Interior Fraser coho study case, the LRP was triggered less often when compared to the multi-dimensional assessment tool. This is likely associated with the fact that single metric benchmarks are usually less reliable in assessing status when compared to $S_{gen}$. By combining multiple metrics, the multi-dimensional status assessment tool likely improves the stability of the assessment results. In addition, using the multi-dimensional approach allows for the consideration of CU's that would otherwise be considered data deficient. The exclusion of CUs with incomplete time series led to overoptimistic assessments in the Inside South Coast Chum - Non-Fraser study case. 
+The case studies in this paper considered a variety of metrics and assessment methods for determining status of individual CUs. We found that using $S_{gen}$ as single metric lower benchmark resulted in similar status assessments to using the rapid multidimensional scanning tool. This similarities occur because, when $S_{gen}$ estimates are available, the rapid multidimensional scanning tool will almost always default to the $S_{gen}$ estimates to assess status, as was seen on both Interior Fraser coho and WCVI chinook study cases. Exceptions occur when the $S_{gen}$ estimates are below the absolute population thresholds (e.g., below 1500 spawners), as occurred in the interior Fraser coho study case. The status assessments, however, are sensitive to the method and recruitment model used to estimate $S_{gen}$. The decision on which method to consider depends on the interpretation of the data and prior knowledge for each CU, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. 
+In data poor scenarios, it may not be possible to estimate $S_{gen}$, as was seen in the Inside South Coast Chum - Non-Fraser study case. When $S_{gen}$ estimates are not available and alternative single metric benchmarks are used, e.g. abundance percentiles, the status assessments between the rapid multidimensional scanning tool and single metric approach diverge more often. For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was triggered more often when percentile benchmarks were used. Whereas when the distributional target was used as a metric for the Interior Fraser coho study case, the LRP was triggered less often when compared to rapid multidimensional scanning tool. This is likely associated with the fact that alternative single metric benchmarks are usually more volatile then assessments results based on $S_{gen}$ or the rapid multidimensional scanning tool. In addition, using the rapid multidimensional scanning tool allows for the consideration of CUs that would otherwise be considered data deficient, thus allowing cor a more complete assessment of the SMU status. This was illustrated in the Inside South Coast Chum - Non-Fraser study case, as the exclusion of CUs with incomplete time series led to overoptimistic assessments. 
 
 
 
@@ -19,11 +18,11 @@ For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was
 
 ### Logistic regression-based LRPs
 
-The Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. In this method we apply a logistic regression to identify historical abundance levels associated with probabilities that all CUs within an SMU have statuses above the red zone or above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessment, which are sensitive to the method chosen for the assessment and the data availability. 
+The Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. In this method we apply a logistic regression to identify historical abundance levels associated with probabilities that all CUs within an SMU have statuses above the red zone or above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessments, which are sensitive to the method chosen for the assessment and the data availability. We found that the logistic regression-based LRPs were only estimable when Cu assessment was based on single-metric assessments, such as $S_{gen}$ or the distributional target method pplied to the IF coho study case. 
 
-The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. In addition, individual CU must have moderate to high level of correlation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Additional factors for the poor fit of the logistic regression-based LRPs for the Inside South Coast Chum - Non-Fraser study case include the presumed wide range of productivity and capacity values for the CUs within taht SMU. 
+The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. In addition, individual CU must have moderate to high level of correlation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Additional factors for the poor fit of the logistic regression-based LRPs for the Inside South Coast Chum - Non-Fraser study case include the presumed wide range of productivity and capacity values for the CUs within that SMU. 
 
-Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data is missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis.The influence of missing data was also dependant on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that ommitting data for a CU with amber or green status because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
+Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data is missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis.The influence of missing data was also dependent on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that omitting data for a CU with amber or green status because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
 
 Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this aggregate abundance LRP estimation method. In addition, we illustrate how the diagnostics are used in support of the model fit in chapter \@ref(IFCChapter), and against the model fit in the \@ref(ISCchumChapter).    
 
@@ -33,7 +32,7 @@ Finally, it is important to inspect model diagnostics and statistically test the
 CW Question: Why did we not apply the projection-based LRP to the Chum study case? Was is because we had no means of estimating the SR parameters for the Chum CUs? If that is the case, would it be correct to say that the projection-based LRP is not appropriate for data poor scenarios? 
 -->
 
-The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a pre-defined level of expoitation. The most important requirement for the application of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU. Parameter estimates for productivity and capacity can be provided based on single parameter estimates, e.g., parameters derived based on expert input, life-stage models or watershed model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)) or posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)). We did not estimate projection-based LRPs for Inside South Coast Chum - Non-Fraser study case because estimates of capacity and productivity were not available for the CUs within that SMU. 
+The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for the application of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU. Parameter estimates for productivity and capacity can be provided based on single parameter estimates, e.g., parameters derived based on expert input, life-stage models or watershed model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)) or posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)). We did not estimate projection-based LRPs for Inside South Coast Chum - Non-Fraser study case because estimates of capacity and productivity were not available for the CUs within that SMU. 
 
 The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI chinook study case, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the interior Fraser coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
