--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -40,6 +40,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FKWQWWB7\\Bradford et al. - 2000 - Reference points for coho salmon ( iOncorhynchus.pdf}
 }
 
+@article{bradfordReviewBiologicalPrinciples2004a,
+  title = {A Review of Biological Principles and Methods Involved in Setting Minimum Population Sizes and Recovery Objectives for {{September}} 2004 Drafts of the {{Cultus}} and {{Sakinaw Lake}} Sockeye Salmon and {{Interior Fraser}} Coho Salmon Recovery Plans},
+  author = {Bradford, Michael J. and Wood, Chris},
+  year = {2004},
+  journal = {Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2004/128},
+  pages = {48},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\B3X6RF76\\Bradford2014.pdf}
+}
+
 @techreport{bradfordStatusCultusLake2010,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
   title = {Status of {{Cultus Lake}} Sockeye Salmon},
@@ -107,6 +117,23 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\KFDH5KB5\\Chaput - Considerations for defining reference points for A.pdf}
 }
 
+@article{collieHarvestStrategiesClimateresilient2021,
+  title = {Harvest Strategies for Climate-Resilient Fisheries},
+  author = {Collie, Jeremy S and Bell, Richard J and Collie, Samuel B and Minto, C{\'o}il{\'i}n},
+  editor = {Poos, Jan Jaap},
+  year = {2021},
+  month = oct,
+  journal = {ICES Journal of Marine Science},
+  volume = {78},
+  number = {8},
+  pages = {2774--2783},
+  issn = {1054-3139, 1095-9289},
+  doi = {10.1093/icesjms/fsab152},
+  abstract = {A pressing challenge for climate-vulnerable fisheries is how to manage now for present and future climate change. In contrast to climate forecasting approaches, we track integrated signals of change for example populations in a climatically forced region and use stochastic dynamic programming to compare the performance of a range of management-ready policies over all possible future states. Our main results highlight: (i) that biomass-linked harvest control rules (HCRs) can partially compensate for changing production, even if the HCR is time invariant; and (ii) that the form of utility (e.g. risk neutral or risk averse) can result in remarkably different optimal decision paths. Performance over future horizons degrades marginally from dynamic HCRs to static HCRs (except at low productivity where differences are more pronounced) but markedly when the biomass level is ignored altogether, as is the case in many managed fish populations globally. Understanding the processes whereby climate affects productivity is important for interpreting past data, but forecasts are not needed for tactical decision making now. Instead, we argue that the priorities for managing fish stocks influenced by climate change are to: measure the current productivity, assess the current abundance of the stock, and respond with a dynamic HCR.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\P7X5J85A\\Collie et al. - 2021 - Harvest strategies for climate-resilient fisheries.pdf}
+}
+
 @article{cookFrameworkAssessmentOffshore2017,
   title = {Framework {{Assessment}} of the {{Offshore American Lobster}} ({{Homarus}} Americanus) in {{Lobster Fishing Area}} ({{LFA}}) 41},
   author = {Cook, Adam M and {Da-Ros}, Manon Cassista and Denton, Cheryl},
@@ -155,6 +182,18 @@
   number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2016/042},
   pages = {15},
   langid = {english}
+}
+
+@techreport{dfoScienceAdvicePrecautionary2021,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
+  title = {Science {{Advice}} for {{Precautionary Approach Harvest Strategies}} under the {{Fish Stocks Provisions}}},
+  author = {{DFO}},
+  year = {2021},
+  number = {2021/004},
+  pages = {34},
+  abstract = {This Science Advisory Report (SAR) provides advice to the Science Sector concerning the implications of the revised Fisheries Act (2019), particularly the Fish Stocks provisions (FSP). The FSP are viewed in light of Canada's Fishery Decision-Making Framework Incorporating the Precautionary Approach (the `PA Policy'). The advice is organized into sections according to the text of the new legislation. Key points selected from the recommendations in the body of this report appear below.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\YVC856LV\\Science Advice for Precautionary Approach Harvest .pdf}
 }
 
 @article{dfoScienceGuidelinesSupport2021,
@@ -399,6 +438,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3J2546ZW\\Mullowney et al. - Basis for A Precautionary Approach and Decision Ma.pdf}
 }
 
+@techreport{nobleHabitatbasedEscapementBenchmarks2015,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}. 2015/050},
+  title = {Habitat-Based Escapement Benchmarks for {{Coho Salmon}} in {{Georgia Strait Mainland}}, {{Georgia Strait Vancouver Island}}, and {{Lower Fraser River Management Units}}.},
+  author = {Noble, CAJ and Korman, J and Bocking, R},
+  year = {2015},
+  pages = {x + 91},
+  abstract = {Objectives of both the Pacific Salmon Treaty (PST) and the Wild Salmon Policy (WSP) require the development of biological benchmarks for assessing population status and monitoring exploitation of Southern BC Coho Salmon. Insufficient data at appropriate temporal and stock-specific scales prevents the use of traditional stock-recruit methods for deriving biological benchmarks for these populations. Instead, novel analytic approaches are required to utilize information from the available data. For populations of Southern BC Coho Salmon, an analysis funded by the Southern Endowment Fund of the Pacific Salmon Commission (PSC) was undertaken by LGL Ltd. of Sidney, BC and Ecometric Research of Vancouver, BC to provide science-based recommendations for escapement and exploitation rate benchmarks. Fisheries and Oceans Canada (DFO) Fisheries Management Branch has requested that Science Branch provide advice, based on the Contractors' work, for science-based escapement and exploitation rate benchmarks for three PST management units and their component WSP conservation units of Southern BC Coho Salmon. Results of this assessment and advice arising from the Regional Peer Review process will be used to inform the ongoing development of WSP benchmarks, assessment of WSP conservation unit status and PST management reference points. This Science Advisory Report is from the November 4-5, 2014 and April 14, 2015 regional peer review on Determination of Escapement and Exploitation Rate Benchmarks for the Three Georgia Strait Southern BC Coho Management Units. Additional publications from this meeting will be posted on the Fisheries and Oceans Canada (DFO) Science Advisory Schedule as they become available.},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\J5XYMZMI\\Noble et al. - 2015 - Habitat-based escapement benchmarks for Coho Salmo.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\TAKF7CZY\\Coho Habitat-based BMs 2015 Res Doc.pdf}
+}
+
 @article{pestalUpdatedMethodsAssessing2012,
   title = {Updated {{Methods For Assessing Harvest Rules For Fraser River Sockeye Salmon}} ({{Oncorhynchus}} Nerka)},
   author = {Pestal, Gottfried and Huang, Ann-Marie and Cass, Alan},
@@ -445,6 +494,22 @@
   month = jan,
   publisher = {{Oxford University Press}},
   abstract = {Open access (or the " tragedy of the commons ") is a well-known explanation of fish stock depletion and of overcapacity. This chapter focuses on the complexity of proper management of the commons, specifically, policies to control total allowable catch (TAC) and total harvesting capacity: what are the major challenges, why is it easy for policy makers to misperceive, and how can communication be improved to ensure more rapid learning? Section 45.2 deals with the problem of overcapacity and resource depletion in the process of adapting fishing industries to resource limits. Section 45.3 considers " steady-state " strategies for controlling TAC and total capacity in fisheries with environmental variation. Section 45.4 deals with implications of assessment error for steady-state policies. Finally, section 45.5 discusses boundaries of models and methods and calls for balanced interdisciplinary analysis, and section 45.6 concludes.}
+}
+
+@article{szuwalskiClimateChangeNonstationary2016,
+  title = {Climate Change and Non-Stationary Population Processes in Fisheries Management},
+  author = {Szuwalski, Cody S. and Hollowed, Anne B.},
+  year = {2016},
+  month = may,
+  journal = {ICES Journal of Marine Science},
+  volume = {73},
+  number = {5},
+  pages = {1297--1305},
+  issn = {1095-9289, 1054-3139},
+  doi = {10.1093/icesjms/fsv229},
+  abstract = {The potential influence of climate change on the future distribution and abundance of fish (and therefore commercial fisheries and food security) is increasingly recognized in the fishery management community. A changing climate will likely have differing effects on different species; some will flourish, some will flounder. Management targets for fishing mortality and spawning biomass are often calculated by assuming stationary population processes, but under climate change, this assumption may be violated. Non-stationary population processes can introduce bias into estimates of biomass from stock assessments and calculations of target fishing mortalities and biomasses. However, few accepted frameworks exist for incorporating the changing influence of the environment on exploited populations into management strategies. Identifying changes in population processes due to environmental influences is important in order to enable climate-enhanced management strategy evaluations to elucidate the potential benefits and costs of changing management targets. Cost/benefit analyses will also be useful when coincidentally caught species respond differently to environmental change.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\AIQKL8VN\\Szuwalski and Hollowed - 2016 - Climate change and non-stationary population proce.pdf}
 }
 
 @techreport{withlerGeneticallyBasedTargets2018,
